2006-12-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Map to existing places if possible
	* src/Merge/_MergePerson.py: Merge identical names
	* src/ViewManager.py: bind <Alt>N and <Alt>P to next and previous view

2006-12-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py: removed change_page(): Do not set
	the toolbar buttons to a possibly wrong state, these are set by
	_change_person properly.

2006-12-30  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py:  Add edit button to view, shorten names of 
	buttons
	* src/GrampsDb/_GrampsGEDDB.py: properly handle bookmark list

2006-12-28  Don Allingham  <don@gramps-project.org>
	* src/docgen/PdfDoc.py: convert image name to str from unicode
	due to a ReportLab bug.

2006-12-27  Don Allingham  <don@gramps-project.org>
	* configure.in: change version number to 2.2.5

2006-12-26  Zsolt Foldvari  <zsolt.foldvari@gmail.com>
	* src/GrampsWidgets.py: Add MaskedEntry, a widget to emulate the
	KiwiEntry from the Kiwi project.

2006-12-25  Alex Roitman  <shura@gramps-project.org>
	* config.sub, config.guess: Update.

2006-12-25  Stefan Bjork  <betula@users.sourceforge.net>
	* src/DateHandler/_Date_sv.py: Revert endash changes. Passes
	date_test.py.

2006-12-24  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: Fixes.
	* src/plugins/holidays.xml: Fixes.

2006-12-23  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EventRefModel.py: properly sort events by date (bug #508)
	* src/DisplayTabs/_EventEmbedList.py: properly sort events by date (bug #508)

2006-12-22  Alex Roitman  <shura@phy.ucsf.edu>
	* src/GrampsDb/_WriteGedcom.py (write_source_ref): Write PAGE as a
	single line.
	* src/Editors/_EditFamily.py (build_interface): Remove extra
	show() call.
	* src/Editors/_EditMedia.py (_local_init): Remove extra show() call.
	* src/Editors/_EditEvent.py (_local_init): Remove extra show() call.